--- a/Contacts/Contacts.DataAcessLayer/Contacts.DataAcessLayer.csproj
+++ b/Contacts/Contacts.DataAcessLayer/Contacts.DataAcessLayer.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="clsConnectionSettings.cs" />
-    <Compile Include="clsContactsDataAcess.cs" />
+    <Compile Include="ClsContactsDataAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
