--- a/Contacts/Contacts.BusinessLayer/Contacts.BusinessLayer.csproj
+++ b/Contacts/Contacts.BusinessLayer/Contacts.BusinessLayer.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="clsContact.cs" />
+    <Compile Include="ClsContact.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
