--- a/Contacts/CountryDaatAcessLayer/DataAccessLayer.csproj
+++ b/Contacts/CountryDaatAcessLayer/DataAccessLayer.csproj
@@ -41,8 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClsConnectionSettings.cs" />
-    <Compile Include="ClsCountryDataAccessLayer.cs" />
+    <Compile Include="ConnectionSettings.cs" />
+    <Compile Include="ContactData.cs" />
+    <Compile Include="CountryData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
